--- a/src/test/storybook/storybook.css
+++ b/src/test/storybook/storybook.css
@@ -7,6 +7,9 @@
 .storybook-shell--app {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
   overflow: hidden;
 }
 
